--- a/hw/hw01-good_luck_babe.ipynb
+++ b/hw/hw01-good_luck_babe.ipynb
@@ -77,10 +77,7 @@
     "\n",
     "import scipy.stats as sts\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "### ╰( ͡° ͜ʖ ͡° )つ▬▬ι═══════  bzzzzzzzzzz\n",
-    "# will the code be with you"
+    "import seaborn as sns"
    ]
   },
   {
@@ -1427,282 +1424,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d74cb3e6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4673dae",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4802a1ac",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "ced1cda6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# your code here\n",
     "# ฅ^•ﻌ•^ฅ "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "6e388249",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>product</th>\n",
-       "      <th>Instant food products</th>\n",
-       "      <th>UHT-milk</th>\n",
-       "      <th>abrasive cleaner</th>\n",
-       "      <th>artif. sweetener</th>\n",
-       "      <th>baby cosmetics</th>\n",
-       "      <th>bags</th>\n",
-       "      <th>baking powder</th>\n",
-       "      <th>bathroom cleaner</th>\n",
-       "      <th>beef</th>\n",
-       "      <th>berries</th>\n",
-       "      <th>...</th>\n",
-       "      <th>turkey</th>\n",
-       "      <th>vinegar</th>\n",
-       "      <th>waffles</th>\n",
-       "      <th>whipped/sour cream</th>\n",
-       "      <th>whisky</th>\n",
-       "      <th>white bread</th>\n",
-       "      <th>white wine</th>\n",
-       "      <th>whole milk</th>\n",
-       "      <th>yogurt</th>\n",
-       "      <th>zwieback</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1000</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1001</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1002</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1003</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1004</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 167 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "product  Instant food products  UHT-milk  abrasive cleaner  artif. sweetener  \\\n",
-       "id                                                                             \n",
-       "1000                         0         0                 0                 0   \n",
-       "1001                         0         0                 0                 0   \n",
-       "1002                         0         0                 0                 0   \n",
-       "1003                         0         0                 0                 0   \n",
-       "1004                         0         0                 0                 0   \n",
-       "\n",
-       "product  baby cosmetics  bags  baking powder  bathroom cleaner  beef  berries  \\\n",
-       "id                                                                              \n",
-       "1000                  0     0              0                 0     0        0   \n",
-       "1001                  0     0              0                 0     1        0   \n",
-       "1002                  0     0              0                 0     0        0   \n",
-       "1003                  0     0              0                 0     0        0   \n",
-       "1004                  0     0              0                 0     0        0   \n",
-       "\n",
-       "product  ...  turkey  vinegar  waffles  whipped/sour cream  whisky  \\\n",
-       "id       ...                                                         \n",
-       "1000     ...       0        0        0                   0       0   \n",
-       "1001     ...       0        0        0                   1       0   \n",
-       "1002     ...       0        0        0                   0       0   \n",
-       "1003     ...       0        0        0                   0       0   \n",
-       "1004     ...       0        0        0                   0       0   \n",
-       "\n",
-       "product  white bread  white wine  whole milk  yogurt  zwieback  \n",
-       "id                                                              \n",
-       "1000               0           0           2       1         0  \n",
-       "1001               1           0           2       0         0  \n",
-       "1002               0           0           1       0         0  \n",
-       "1003               0           0           0       0         0  \n",
-       "1004               0           0           3       0         0  \n",
-       "\n",
-       "[5 rows x 167 columns]"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# your code here\n",
-    "# ٩(⁎❛ᴗ❛⁎)۶"
    ]
   },
   {
@@ -1772,19 +1499,11 @@
     "# your code here\n",
     "# (｡❤‿❤｡)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b319b3f1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1798,7 +1517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
